modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/cart.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/checkout.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/login.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/product.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -17,14 +17,22 @@
         {% if cart_items %}
         <thead>
             <tr>
-                <th>Items: <strong>5</strong></th>
+                <th>Items: <strong>
+                    {% for key, value in cart_quantities.items %}
+                        {% with x as {{value}} %}
+                            x++
+                        {% endwith %}
+                    {% endfor %}
+                </strong></th>
                 <th>Total: <strong>$ 500</strong></th>
                 <th class="checkout"><a href="{% url 'checkout' %}"><button type="button">Checkout</button></a></th>
             </tr>
         </thead>
+        {% endif %}
     </table>
 
     <div class="cart-elements-container">
+        {% if cart_items %}
         <div class="cart-element-header">
             <div class="cart-item-image"></div>
             <div class="cart-item-name"><strong>Item</strong></div>
@@ -33,35 +41,32 @@
         </div>
         <hr>
 
-        
+        {% endif %}
         <div class="cart-element">
+            {% if cart_items %}
             {% for item in cart_items %}
             <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="20%"></div>
             <div class="cart-item-name">{{item.name}}</div>
-            <div class="cart-item-quantity">
-                
-              
+            <div class="cart-item-quantity">  
                
                {% for key, value in cart_quantities.items %}
                     
-                    {% if key == product.id|slugify %}
+                    {% if key == item.id|slugify %}
                         {{ value }}
                     {% endif %}
                         
                {% endfor %}
                 
-
                 <!-- <p><span>&#9652</span><span>&#9662</span></p> -->
             </div>
             <div class="cart-item-total">$ {{item.price}}</div>
             {% endfor %}
-        </div>
-        {% else %}
-        <div class="cart-element">
-            <br><br><br><br><br><br><br><br><br>
+            {% else %}
+            <br><br><br><br><br><br>
             <h1>Nothing in your cart... <a href="{% url 'home' %}">Continue Shopping</a></h1>
+            {% endif %}
         </div>
-        {% endif %}
+        
    
     </div>
 </div>
