--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/product.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/product.css
@@ -5,10 +5,12 @@
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     background-color: aliceblue;
 }
+.back_home {
+  padding-bottom: .5em;
+}
 
-.continue-shopping button{
+.back_home button{
   padding: .5em 1em;
-  border-radius: 5px;
 }
 
 .product-image-card {
@@ -92,7 +94,7 @@
   font-weight: 600;
 }
 
-button:hover {
+.quantity button:hover {
   background: orange;
   transition: ease-in 0.3s;
   cursor: pointer;
