--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -10,7 +10,7 @@
 <div class="product-page-container">
     
     <div class="product-image-card">
-        <div class="continue-shopping">
+        <div class="back_home">
             <a href="{% url 'home' %}"><button>&larr; Back to Home</button></a>
         </div>
 
