--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html
@@ -9,36 +9,15 @@
 
 {% block content %}
 <div class="checkout-container">
-    <div class="customer-information">
-        <div class="user-information">
-            <form action="">
-                <input type="text" placeholder="Name" name="name">
-                <input type="email" placeholder="Email" name="email">
-            </form>
-        </div>
-
-        <div class="shipping-information">
-            <hr>
-            <p>Shipping Information</p>
-            <form action="">
-                <input type="text" placeholder="Address">
-                <input type="text" placeholder="City">
-                <input type="text" placeholder="State">
-                <input type="text" placeholder="Phone Number">
-                <hr>
-                <input type="submit" value="Continue">
-            </form>
-        </div>
-
-    </div>
+    
     <div class="order-summary">
         <div class="back-to-cart">
             <a href="{% url 'cart' %}"><button>&larr; Back to Cart</button></a>
         </div>
         
         <div class="cart-elements-container">
-            <hr>
-            <h4>Order Summary</h4>
+            
+            <h1>Order Summary</h1>
             <hr>
             <div class="cart-element">
                 
@@ -46,9 +25,16 @@
                 <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="20%"></div>
                 <div class="cart-item-name">{{ item.name }}</div>
                 <div class="cart-item-quantity">
-                    <p>X 3</p>
+                    <p>x
+                        {% for key, value in cart_quantities.items %}
+                    
+                        {% if key == item.id|slugify %}
+                            {{ value }}
+                        {% endif %}
+                            
+                        {% endfor %}</p>
                 </div>
-                <div class="cart-item-total">$ 30</div>
+                <div class="cart-item-total">$ 30 </div>
                 {% endfor %}
                 
             </div>
@@ -57,6 +43,30 @@
             <p>Amount: $30</p>
             
         </div>
+    </div>
+
+    <div class="customer-information">
+        <h1>Customer Information</h1>
+        <div class="user-information">
+            <form action="">
+                <input type="text" placeholder="Name" name="name">
+                <input type="email" placeholder="Email" name="email">
+            </form>
+        </div>
+
+        <div class="shipping-information">
+            
+            <h1>Shipping Information</h1>
+            <form action="">
+                <input type="text" placeholder="Address">
+                <input type="text" placeholder="City">
+                <input type="text" placeholder="State">
+                <input type="text" placeholder="Phone Number">
+                
+                <input type="submit" value="Continue">
+            </form>
+        </div>
+
     </div>
 </div>
 {% endblock content %}
