--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/checkout.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/checkout.css
@@ -1,23 +1,21 @@
 .checkout-container {
     display: flex;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     justify-content: space-between;
     background-color: aliceblue;
 }
 
 .customer-information, .order-summary {
-    width: 46%;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.2);
-    padding: .5em;
+    width: 50%;
+    box-shadow: 0 4px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+    padding: 1em;
 }
 
-.user-information {
-    gap: 2em;
-}
+
 
 .customer-information input {
-    width: 40%;
+    width: 100%;
     padding: .5em 1em;
     margin-top: 1em;
     margin-right: 1em;
@@ -31,14 +29,23 @@
 }
 
 .back-to-cart {
-    margin-left: .5em;
+    padding-bottom: .5em;
 }
+
+.back-to-cart button {
+    padding: .5em .8em;
+}
+
 
 
 @media (max-width: 600px) {
     .checkout-container {
         width: 100%;
         display: block;
+    }
+
+    .customer-information, .order-summary {
+        width: 100%;
     }
 
     .shipping-information {
