modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/cart.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css

--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css
@@ -55,11 +55,11 @@ table .checkout {
 
 
 .cart-item-image, .cart-item-name{
-    flex: 30%;
+    flex: 25%;
 }
 
-.cart-item-quantity, .cart-item-total{
-    flex: 20%;
+.cart-item-quantity, .cart-item-price, .cart-item-total{
+    flex: 15%;
 }
 
 .cart-item-quantity p {
