--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -18,7 +18,7 @@
         <thead>
             <tr>
                 <th>Items: <strong>{{ total_quantity }}</strong></th>
-                <th>Total: <strong>$ 500</strong></th>
+                <th>Total: <strong>$ {{ order_total }}</strong></th>
                 <th class="checkout"><a href="{% url 'checkout' %}"><button type="button">Checkout</button></a></th>
             </tr>
         </thead>
@@ -47,7 +47,12 @@
                 
                 <!-- <p><span>&#9652</span><span>&#9662</span></p> -->
             </div>
-            <div class="cart-item-price">$ {{item.price}}</div>
+            
+            {% if item.is_sale %}
+            <div class="cart-item-price">$ {{item.sale_price}}</div>
+            {% else %}
+            <div class="cart-item-price">$ {{item.price}}</div> 
+            {% endif %}
             <div class="cart-item-total">$ {{item.total_price}}</div>
             {% endfor %}
             {% else %}
