--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -3,6 +3,9 @@
         <div class="navbar">
             <div class="navbar-mobile">
                 <a href="{% url 'home' %}" class="logo">SqCodes</a>
+                {% if user.is_authenticated and user.is_staff %}
+                <a href="#">Dashboard</a>
+                {% endif %}
                 <li class="dropdown hide">
                         {% if user.is_authenticated %}
                         <a href="#" class="account-link">{{ user.first_name }} {{ user.last_name }}&#9662</a>
