modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/admin.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -4,7 +4,7 @@
             <div class="navbar-mobile">
                 <a href="{% url 'home' %}" class="logo">SqCodes</a>
                 {% if user.is_authenticated and user.is_staff %}
-                <a href="#">Dashboard</a>
+                <a href="{% url 'admin_dashboard' %}">Dashboard</a>
                 {% endif %}
                 <li class="dropdown hide">
                         {% if user.is_authenticated %}
