--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/register.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/register.html
@@ -11,25 +11,14 @@
 <!-- Register form -->
 <div class="form-container">
     <form action="" method="post" class="register-form">
+        {% csrf_token %}
         <div class="img">
             <span id="close-signup-form" class="close"><a href="{% url 'home' %}">&times;</a></span>
             <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
         </div>
         <div class="login-container">
-            <label for="fname">First Name</label>
-            <input type="text" placeholder="Enter First Name" name="fname" id="fname" autocomplete="fname" required>
-            
-            <label for="lname">Last Name</label>
-            <input type="text" placeholder="Enter Last Name" name="lname" id="lname" autocomplete="lname" required>
-            
-            <label for="email">Email</label>
-            <input type="email" placeholder="Enter Email" name="email" id="email" autocomplete="email" required>
-
-            <label for="password">Password</label>
-            <input type="password" placeholder="Enter Password" name="password" id="password" required>
-
-            <label for="password">Repeat Password</label>
-            <input type="password" placeholder="Enter Password" name="password" id="password" required>
+            {% csrf_token %}
+            {{ form }}
 
             <button type="submit">Register</button>
             
