modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/main.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html
@@ -22,11 +22,13 @@
             <div class="cart-element">
                 
                 {% for item in cart_items %}
-                <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="20%"></div>
+                <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="60%"></div>
                 <div class="cart-item-name">{{ item.name }}</div>
+                <div class="cart-item-price">x</div>
                 <div class="cart-item-quantity">
-                    <p>x {{ item.quantity }}</p>
+                    <p> {{ item.quantity }}</p>
                 </div>
+                
                 <div class="cart-item-total">$ {{item.total_price}}</div>
                 {% endfor %}
                 
@@ -56,7 +58,7 @@
                 <input type="text" placeholder="State">
                 <input type="text" placeholder="Phone Number">
                 
-                <input type="submit" value="Continue">
+                <input type="submit" value="Continue" style="cursor: pointer;">
             </form>
         </div>
 
