--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/main.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/main.css
@@ -23,6 +23,7 @@ width: 100%;
 
 a {
 text-decoration: none;
+cursor: pointer;
 }
 
 .container {
@@ -64,6 +65,7 @@ header .hero-header{
 button {
   background-color: var(--main-color);
   border: none;
+  cursor: pointer;
 }
 
 .section-title {
