modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/models.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/core/migrations/0001_initial.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/core/migrations/__pycache__/0001_initial.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/models.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/login.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/settings.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/login.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/login.html
@@ -17,8 +17,8 @@
             <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
         </div>
         <div class="login-container">
-            <label for="username">Email</label>
-            <input type="text" placeholder="Enter Email" name="username" id="username" autocomplete="username" required>
+            <label for="email">Email</label>
+            <input type="text" placeholder="Enter Email" name="email" id="email" autocomplete="username" required>
             
             <label for="password">Password</label>
             <input type="password" placeholder="Enter Password" name="password" id="password" required>
