--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css
@@ -25,41 +25,45 @@ text-decoration: none;
 
 .container {
 min-height: 100vh;
-background-color: orange;
 width: 100%;
-margin: 3em auto;
+margin: 3em 0;
 margin-bottom: 2em;
 padding: .5em;
 position: relative;
 }
-.content {
-  min-height: 80vh;
+
+
+.admin-dashboard .container .side-bar {
+  min-height: 100vh;
+  width: 20%;
+  border: 2px solid blue;
+  background-color: aquamarine;
+  position: fixed;
+  top: 2.8em; 
+  z-index: 100;
+  float: left;
 }
 
 .admin-dashboard .container .content {
   display: flex;
-  width: 100%;
-  
+  width: 80%;
+  justify-content: space-between;
+  min-height: 100vh;
+  border: 2px solid blue;
+  margin-left: 20%;
 }
 
-.admin-dashboard .container .content .side-bar {
-  min-height: 100vh;
-  flex: 15%;
-  border: 2px solid blue;
-  background-color: aquamarine;
-  position: sticky;
-  top: 6em; 
-  z-index: 100;
-}
+
 
 .admin-dashboard .container .content .main-content{
-  flex: 55%;
   border: 2px solid blue;
+  flex: 60%;
 }
 
 .admin-dashboard .container .content .side-right{
-  flex: 23%;
+  
   border: 2px solid blue;
+  flex: 20%;
 }
 
 
