new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/add_shopping_cart_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/analytics_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/chat_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/contact_mail_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/dashboard_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/forum_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/groups_FILL0_wght400_GRAD0_opsz24.svg 	modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/inventory_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/mail_FILL0_wght400_GRAD0_opsz24.svg 	modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/orders_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/redeem_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/remove_shopping_cart_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/reviews_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/shopping_bag_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/shopping_cart_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/shopping_cart_checkout_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Tem

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css
@@ -36,34 +36,37 @@ position: relative;
 .admin-dashboard .container .side-bar {
   min-height: 100vh;
   width: 20%;
-  border: 2px solid blue;
-  background-color: aquamarine;
+  background-color: rgb(195, 205, 201);
   position: fixed;
   top: 2.8em; 
   z-index: 100;
   float: left;
 }
 
+.admin-dashboard .container .side-bar .menu-item {
+  padding: 1em;
+}
+
+
 .admin-dashboard .container .content {
   display: flex;
   width: 80%;
   justify-content: space-between;
   min-height: 100vh;
-  border: 2px solid blue;
   margin-left: 20%;
 }
 
 
 
 .admin-dashboard .container .content .main-content{
-  border: 2px solid blue;
   flex: 60%;
+  padding: 1em;
 }
 
 .admin-dashboard .container .content .side-right{
-  
-  border: 2px solid blue;
   flex: 20%;
+  padding: 1em;
+  background-color: rgb(195, 205, 201);
 }
 
 
