--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/navbar.css
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/navbar.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     box-shadow: 2px 0 2px rgba(0, 0, 0, 0.4);
     font-size: 1rem;
-    color: black;
+    color: rgb(255, 255, 255);
     position: fixed;
     top: 0;
     left: 0;
@@ -16,7 +16,7 @@
   
   
   .navbar a {
-    color: black;
+    color: rgb(0, 0, 0);
   }
   
   .navbar-links ul{
